tests/paczka2/big_fuzzy/15031767.err
Error in line 1: 9n0SXq7380S S940 49,5
Error in line 17: Ul7QU0ELg S474 69,7
Error in line 37: S940 A405 0,8
Error in line 42: 9n0SXq7380S A405 71,1
Error in line 47: 9n0SXq7380SS940320,5
Error in line 46: OL4OI S971 3,8
Error in line 44: S940 S971 38,0
Error in line 60: 9n0SXq7380S S940 282,4
Error in line 24: EAwDlWXjwt A405 159,3
Error in line 69: OL4OI S94\ 69,2
Error in line 68: EAwDlWXjwt S940 9,8
Error in line 57: Q3dBl S971 25,6
Error in line 81: S940 S474 70,5
Error in line 76: Q3dBl S474 25,2
Error in line 80: Ul7QU0ELg S971 20,5
Error in line 97: 9n0SXq7380S S971 27,0
Error in line 102: EAwDlWXjwt S474 70,0
Error in line 86: Q3dBl S940 15,0
Error in line 95: S940 S940 87,4
Error in line 103: EAwDlWXjwt S940 50,7
Error in line 93: OL4OI S940 137,4
Error in line 118: 9n0SXq7380S S940 23,6
Error in line 119: OL4OI S474 93,4
Error in line 126: OL4OI A405 63,6
Error in line 120: cyCpXK S971 350,0
Error in line 129: OL4OI S940 37,8
Error in line 124: Q3dBl S940 26,1
Error in line 146: S940 S971 92,34
Error in line 154: cyCpXK S971 53,3
Error in line 163: cyCpXK S940 18,0
Error in line 175: Ul7QU0ELg S474 40,7
Error in line 183: Q3dBl S940 89,1
Error in line 197: Ul7QU0ELg S940 18,9
Error in line 208: OL4OI S971 36,7
Error in line 194: Q3dBl S474 61,9
Error in line 214: Q3dBl A405 26,9
Error in line 210: Ul7QU0ELg S971 117,6
Error in line 234: 9n0SXq7380S A405 48,3
Error in line 229: Ul7QU0ELg S940 49,6
Error in line 242: cyCpXK A40| 83,3
Error in line 228: Q3dBl S940 278,7
Error in line 239: cyCpXK S940 5,2
